@@ -1,6 +1,7 @@
 Version 1.1.1-devel
 -------------------
 - Rename iostreams.h to xml_encoded.h.
+- Move getpara method from iostreams.h to getpara.h.
 
 
 Version 1.1.0 [03 Mar 2016]
